--- a/index.html
+++ b/index.html
@@ -63,7 +63,34 @@
             <hr>
 
         </header>
-        <main></main>
+        <main>
+            <div class="style-checkbox">
+                <h3>03. стилізовані чекбокси </h3>
+                <div class="gender-selection">
+                    <p>Чоловік</p>
+                    <p>Жінка</p>
+                </div>
+            </div>
+            <div class="form-table">
+                <form method="post">
+                    <h3>04. форма таблицею</h3>
+                    <p>Заповніть усі необхідні поля</p>
+                    <div class="form-table-info">
+                        <label for="text">ФІО:<input type="text"></label>
+                        <label for="text">Пароль:<input type="text"></label>
+                        <select>Місто:<option>Хмельницький</select></option>
+                        <label for="text">Стать:<input type="radio">Чоловік
+                            <input type="radio">Жінка</label>
+                        <label for="text"><input type="file">Виберіть файл</label>
+                        <textarea name="" id="" cols="44" rows="10"></textarea>
+                        <button>Зареєструватися</button>
+                    </div>
+                </form>
+            </div>
+
+
+
+        </main>
         <footer>
             <div class="fix-form-main">
                 <h2>06. фіксована форма</h2>
