--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <div class="nova-form">
                     <div class="radio-element">
 
-                        <label for=""><input type="radio">Нова Пошта</label>
-                        <label for=""><input type="radio">Кур’єр</label>
-                        <label for=""><input type="radio">Самовивіз</label>
+                        <label for=""><input type="radio" name="mail">Нова Пошта</label>
+                        <label for=""><input type="radio" name="mail">Кур’єр</label>
+                        <label for=""><input type="radio" name="mail">Самовивіз</label>
                     </div>
                     <div class="checkbox-element">
                         <label for=""><input type="checkbox">Прочитав умови договору</label>
@@ -57,6 +57,7 @@
                     </div>
                     <div class="date">
                         <p>Дата</p>
+                        <label for="date"><input type="date"></label>
                     </div>
                 </div>
             </form>
@@ -79,7 +80,7 @@
                         <label for="text">ФІО:<input type="text"></label>
                         <label for="text">Пароль:<input type="text"></label>
                         <select>Місто:<option>Хмельницький</select></option>
-                        <label for="text">Стать:<input type="radio">Чоловік
+                        <label for="text">Стать:<input type="radio" name="gender">Чоловік
                             <input type="radio">Жінка</label>
                         <label for="text"><input type="file">Виберіть файл</label>
                         <textarea name="" id="" cols="44" rows="10"></textarea>
