--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
             <table>
                 <h2>04. форма таблицею</h2>
+                <p>Заповніть усі необхідні поля</p>
                 <tr>
                     <td><label class="form-styles" for="fio">ФІО:</label></td>
                     <td><label for="names"><input type="text" id="fio" placeholder="Введіть ім’я"></label></td>
@@ -161,7 +162,22 @@
                                 <td colspan="3"><label class="rules" for=""><input type="checkbox">Я погоджуюсь з
                                         правилами оплати та доставки товару</label></td>
                             </tr>
+                            <tr>
+                                <td colspan="3">
+                                    <hr>
+                                </td>
+                            </tr>
                         </table>
+                        <div class="acceptance-form">
+                            <div class="cancel">
+                                <label for="text"><button type="submit">Повернутися назад</button></label>
+                            </div>
+                            <div class="accept">
+                                <label for="text"><button type="submit">Оформити покупку</button></label>
+                            </div>
+                        </div>
+
+
                     </form>
                 </div>
             </div>
