--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                     <label><input type="text" placeholder="Email"></label>
                     <select name="city">
                         <option value="city">Ваше місто</option>
+                        <option value="city">Київ</option>
+                        <option value="city">Львів</option>
+                        <option value="city">Хмельницький</option>
+
                     </select>
                     <textarea name="name" id="input" cols="30" rows="5"> </textarea>
                     <label for="text"><button type="submit">Зареєструватися</button></label>
@@ -42,19 +46,29 @@
                         <label for=""><input type="radio" name="mail">Кур’єр</label>
                         <label for=""><input type="radio" name="mail">Самовивіз</label>
                     </div>
+
                     <div class="checkbox-element">
-                        <label for=""><input type="checkbox">Прочитав умови договору</label>
-                        <label for=""><input type="checkbox">Згідний з ПДВ 9%</label>
-                        <label for=""><input type="checkbox">Отримувати новини на ел. пошту</label>
+
+                        <p><input class="checkbox-style" type="checkbox" id="rules"><label for="rules">Прочитав умови
+                                договору</label></p>
+                        <p><input class="checkbox-style" type="checkbox" id="news-bank"><label for="news-bank">Згідний з
+                                ПДВ 9%</label></p>
+                        <p><input class="checkbox-style" type="checkbox" id="news-mail"><label
+                                for="news-mail">Отримувати новини на ел.пошту</label></p>
                     </div>
                 </div>
 
-                <div class="box-element">
+                <div class="checkbox-element box-element">
+
                     <div class="tovar">
                         <p>Статус</p>
-                        <label for="newss"><input type="checkbox" id="newss">Новинки</label>
-                        <label for="promotional"><input type="checkbox" id="promotional">Акційні товари</label>
-                        <label for="sale"><input type="checkbox" id="sale">Розпродаж</label>
+                        <p><input class="checkbox-style" type="checkbox" id="newss"><label for="newss">Новинки</label>
+                        </p>
+                        <p><input class="checkbox-style" type="checkbox" id="action"><label
+                                for="action">Акційнітовари</label></p>
+                        <p><input class="checkbox-style" type="checkbox" id="sale"><label for="sale">Розпродаж</label>
+                        </p>
+
                     </div>
                     <div class="date">
                         <p>Дата</p>
@@ -66,7 +80,18 @@
 
         </header>
         <main>
+            <form action="gender-male-female">
+                <h2>03. стилізовані чекбокси </h2>
+                <div class="gender-main">
+                    <div class="gender">
 
+                        <input type="radio" name="gender" id="man"><label for="man">Чоловік</label>
+                        <input type="radio" name="gender" id="woman"><label for="woman">Жінка</label>
+                    </div>
+
+                </div>
+            </form>
+            <hr>
             <table>
                 <h2>04. форма таблицею</h2>
                 <p>Заповніть усі необхідні поля</p>
@@ -98,7 +123,7 @@
                 </tr>
                 <tr class="choose-file">
                     <td><label class="form-styles" for="foto">Фото:</label></td>
-                    <td><label for="file"><input type="file" id="foto" name="Виберіть файл"></label></td>
+                    <td><input type="file" id="foto" name=""><label for="foto">Виберіть файл</label></td>
                 </tr>
                 <tr>
                     <td><label class="form-styles" for="comment">Коментарій:</label></td>
@@ -121,14 +146,14 @@
                     <form class="" action="" method="post">
                         <table>
                             <tr class="contacts">
-                                <td><label for="">Прізвище та ім’я</label>
-                                    <label for=""><input class="contacts" type="text"></label>
+                                <td><label for="contacts">Прізвище та ім’я</label>
+                                    <label for=""><input class="contacts" id="contacts" type="text"></label>
                                 </td>
-                                <td><label for="">Ел. пошта</label>
-                                    <label for=""><input class="contacts" type="text"></label>
+                                <td><label for="mail">Ел. пошта</label>
+                                    <label for=""><input class="contacts" type="text" id="mail"></label>
                                 </td>
-                                <td><label for="">Телефон</label>
-                                    <label for=""><input class="contacts" type="text"></label>
+                                <td><label for="tel">Телефон</label>
+                                    <label for=""><input class="contacts" type="text" id="tel"></label>
                                 </td>
                             </tr>
                             <tr>
@@ -137,8 +162,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><label for="">Країна</label>
-                                    <select name="" id="">
+                                <td><label for="country">Країна</label>
+                                    <select name="" id="country">
                                         <option value="">Індонезія</option>
                                         <option value=""></option>
                                     </select></td>
