--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 договору</label></p>
                         <p><input class="checkbox-style" type="checkbox" id="news-bank"><label for="news-bank">Згідний з
                                 ПДВ 9%</label></p>
-                        <p><input class="checkbox-style" type="checkbox" id="news-mail"><label
+                        <p><input class="checkbox-style" type="checkbox" id="news-mail"><label class="transpency"
                                 for="news-mail">Отримувати новини на ел.пошту</label></p>
                     </div>
                 </div>
@@ -64,8 +64,8 @@
                         <p>Статус</p>
                         <p><input class="checkbox-style" type="checkbox" id="newss"><label for="newss">Новинки</label>
                         </p>
-                        <p><input class="checkbox-style" type="checkbox" id="action"><label
-                                for="action">Акційнітовари</label></p>
+                        <p><input class="checkbox-style" type="checkbox" id="action"><label for="action">Акційні
+                                товари</label></p>
                         <p><input class="checkbox-style" type="checkbox" id="sale"><label for="sale">Розпродаж</label>
                         </p>
 
@@ -84,15 +84,18 @@
                 <h2>03. стилізовані чекбокси </h2>
                 <div class="gender-main">
                     <div class="gender">
-
-                        <input type="radio" name="gender" id="man"><label for="man">Чоловік</label>
-                        <input type="radio" name="gender" id="woman"><label for="woman">Жінка</label>
+                        <p><input type="radio" name="gender" id="man"><label for="man">Чоловік</label></p>
+                        <p><input type="radio" name="gender" id="woman"><label for="woman">Жінка</label></p>
                     </div>
-
-                </div>
+                    <div class="checkbox-news">
+                        <p><input type="checkbox" id="give-news"><label for="give-news">Отримувати новини</label></p>
+                        <p><input type="checkbox" id="buy-meat"><label for="buy-meat">Купити додому ковбаси</label></p>
+                        <p><input type="checkbox" id="on-light"><label for="on-light">Включити світло</label></p>
+                    </div>
             </form>
-            <hr>
+
             <table>
+                <hr>
                 <h2>04. форма таблицею</h2>
                 <p>Заповніть усі необхідні поля</p>
                 <tr>
