--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                         <label for=""><input class="checkbox-style" type="radio" name="mail">Нова Пошта</label>
                         <label for=""><input class="checkbox-style" type="radio" name="mail">Кур’єр</label>
-                        <label for=""><input class="checkbox-style" type="radio" name="mail">Самовивіз</label>
+                        <label for=""><input class="checkbox-style disabled" type="radio" name="mail" disabled>Самовивіз</label>
                     </div>
 
                     <div class="checkbox-element">
@@ -54,8 +54,8 @@
                                 договору</label></p>
                         <p><input class="checkbox-style" type="checkbox" id="news-bank"><label for="news-bank">Згідний з
                                 ПДВ 9%</label></p>
-                        <p><input class="checkbox-style" type="checkbox" id="news-mail"><label class="transpency"
-                                for="news-mail">Отримувати новини на ел.пошту</label></p>
+                        <p><input class="checkbox-style disabled" type="checkbox" disabled id="news-mail"><label class="transpency"
+                                for="news-mail" >Отримувати новини на ел.пошту</label></p>
                     </div>
                 </div>
 
