--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><label class="form-styles" for="gender">Стать:</label></td>
+                    <td><label class="form-styles" for="gender-male">Стать:</label></td>
                     <td>
                         <label for="gender-male" class="gendes">
                             <input class="male" id="gender-male" type="radio" name="gender"> Чоловік
@@ -192,19 +192,19 @@
                                         </select></label>
                                 </td>
                                 <td colspan="2">
-                                    <label for="">Адреса</label>
-                                    <label for=""><input type="text"></label>
+                                    <label for="adress">Адреса</label>
+                                    <label for=""><input type="text" id="adress"></label>
                                 </td>
                             </tr>
                             <tr>
-                                <td><label for="">Місто</label>
-                                    <label for=""><input type="text"></label>
+                                <td><label for="city">Місто</label>
+                                    <label for=""><input type="text" id="city"></label>
                                 </td>
-                                <td><label for="">Місто</label>
-                                    <label for=""><input type="text"></label>
+                                <td><label for="citys">Місто</label>
+                                    <label for=""><input type="text" id="citys"></label>
                                 </td>
-                                <td><label for="">Поштовий індекс</label>
-                                    <label for=""><input type="text"></label>
+                                <td><label for="poshta-index">Поштовий індекс</label>
+                                    <label for=""><input type="text" id="poshta-index"></label>
                                 </td>
                             </tr>
                             <tr>
