--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
                     </div>
                     <div class="date">
                         <p class="date-status">Дата</p>
-                        <label for="date"><input type="date" id="date"></label>
-                    </div>
+                        <label for="date">
+                          <input type="date" id="date">
+                        </label>
+                      </div>
+                      
                 </div>
             </form>
             <hr>
